# Rubix-Cube

./: CMakeLists.txt  README.md
Models/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabases.cpp  PatternDatabases.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h  main.cpp
